Changed the index.html file the <ul> and <li> structures in the languages, frameworks and skills sections have been changed to match exactly the figma style also changed the style.css file

--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
           <ul>
             <li class="languages">
                 <div class="lang-title">
-                  <h2>Languages</h2>
+                  <h2 class="lang-title">Languages</h2>
                   <img  src="images/Union.svg" alt="arrow" />
                 </div>
-                <ul>
+                <ul class="lang">
                   <li class="langs">
                     <img src="images/Ellipse 1.png" alt="JavaScript-Logo" />
                     <h4 class="langs-text">JavaSript</h4>
@@ -233,32 +233,18 @@
             <li>
                   <div class="framework">
                     <h2 class="frame-title">Frameworks</h2>
-                    <img src="images/Union.svg" alt="arrow" />   
+                    <img src="images/Union2.svg" alt="arrow" />   
                   </div>
-                  <ul class="content skills-list">
-                    <li>React & Redux</li>
-                    <li>Ruby on Rails</li>
-                    <li>Tailwind CSS</li>
-                    <li>Bootstrap</li>
-                    <li>Jest</li>
-                    <li>RSpec</li>
-                  </ul>
+                  <hr class="new1" />
             </li>
             <li>
                   <div class="skill">
                     <h2 class="skill-title">Skills</h2> 
-                    <img  src="images/Union.svg" alt="arrow" />
+                    <img  src="images/Union2.svg" alt="arrow" />
                   </div>
-                  <ul class="content skills-list">
-                    <li>Postgresql</li>
-                    <li>Github</li>
-                    <li>Git</li>
-                    <li>Heroku, Netlify</li>
-                    <li>Code Reviewer</li>
-                    <li>Pair-Programming</li>
-                  </ul>
+                  <hr class="new1" />
             </li>
-        </ul>
+          </ul>
         </div>
     </section>
     </body>
